crates/benday-core/tests/snapshots/gallery__area_60x10.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
                           queue depth

35┤
  │                                     ⣠⣴⣾⣦⣄
  │                                  ⣠⣶⣿⣿⣿⣿⣿⣿⣷⣤⡀
  │                        ⢀⣄⡀     ⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⣄
  │                      ⣠⣾⣿⣿⣿⣷⣦⣄⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣤⡀
  │                   ⣀⣴⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣤⡀
  │        ⢀⣠⣤⣀⡀   ⢀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⣦⣄⡀
  │    ⢀⣠⣴⣾⣿⣿⣿⣿⣿⣿⣷⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣤
  │⣀⣤⣶⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
 0┤⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  └┴─────────┴─────────┴─────────┴────────┴─────────┴─────────┴
   0         2         4         6        8        10        12

--- meta ---
{
  "dropped_rows": 0,
  "mark": "area",
  "series": [
    {
      "color": "#00d5ef",
      "name": "",
      "points": 13
    }
  ],
  "size": {
    "columns": 63,
    "rows": 14
  },
  "x": {
    "domain": [
      0.0,
      12.0
    ],
    "field": "t",
    "type": "quantitative"
  },
  "y": {
    "domain": [
      0.0,
      35.0
    ],
    "field": "depth"
  }
}
