crates/benday-core/tests/snapshots/gallery__bar_ansi.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
                          [38;2;222;226;232mcolored bar[0m

[38;2;106;112;122m7┤                       [38;2;255;193;81m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿[0m
 [38;2;106;112;122m│                       [38;2;255;193;81m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿[0m
 [38;2;106;112;122m│                       [38;2;255;193;81m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      [38;2;181;208;96m⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀[0m
 [38;2;106;112;122m│                       [38;2;255;193;81m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      [38;2;181;208;96m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿[0m
 [38;2;106;112;122m│                       [38;2;255;193;81m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      [38;2;181;208;96m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿[0m
 [38;2;106;112;122m│   [38;2;75;206;161m⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀      [38;2;255;193;81m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      [38;2;181;208;96m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿[0m
 [38;2;106;112;122m│   [38;2;75;206;161m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      [38;2;255;193;81m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      [38;2;181;208;96m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿[0m
 [38;2;106;112;122m│   [38;2;75;206;161m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      [38;2;255;193;81m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      [38;2;181;208;96m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿[0m
 [38;2;106;112;122m│   [38;2;75;206;161m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      [38;2;255;193;81m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      [38;2;181;208;96m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿[0m
[38;2;106;112;122m0┤   [38;2;75;206;161m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      [38;2;255;193;81m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿      [38;2;181;208;96m⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿[0m
 [38;2;106;112;122m└────────────────────────────────────────────────────────────[0m
           [38;2;106;112;122mjan                 feb                 mar[0m

--- meta ---
{
  "dropped_rows": 0,
  "mark": "bar",
  "size": {
    "columns": 62,
    "rows": 14
  },
  "x": {
    "categories": [
      "jan",
      "feb",
      "mar"
    ],
    "field": "m",
    "type": "nominal"
  },
  "y": {
    "aggregate": "sum",
    "domain": [
      0.0,
      7.0
    ],
    "field": "v"
  }
}
