crates/benday-core/tests/snapshots/gallery__bar_blocks.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
7┤                       ██████████████
 │                       ██████████████
 │                       ██████████████      ▁▁▁▁▁▁▁▁▁▁▁▁▁▁
 │                       ██████████████      ██████████████
 │                       ██████████████      ██████████████
 │   ▂▂▂▂▂▂▂▂▂▂▂▂▂▂      ██████████████      ██████████████
 │   ██████████████      ██████████████      ██████████████
 │   ██████████████      ██████████████      ██████████████
 │   ██████████████      ██████████████      ██████████████
0┤   ██████████████      ██████████████      ██████████████
 └────────────────────────────────────────────────────────────
           jan                 feb                 mar

--- meta ---
{
  "dropped_rows": 0,
  "mark": "bar",
  "size": {
    "columns": 62,
    "rows": 12
  },
  "x": {
    "categories": [
      "jan",
      "feb",
      "mar"
    ],
    "field": "m",
    "type": "nominal"
  },
  "y": {
    "aggregate": "sum",
    "domain": [
      0.0,
      7.0
    ],
    "field": "v"
  }
}
