crates/benday-core/tests/snapshots/gallery__grouped_bars_ansi.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
                  [38;2;222;226;232mreferrals in vs out by quarter[0m

[38;2;106;112;122m80┤[0m
  [38;2;106;112;122m│                                                [38;2;85;196;254m⣿⣿⣿⣿⣿[0m
  [38;2;106;112;122m│                                 [38;2;85;196;254m⣶⣶⣶⣶⣶          ⣿⣿⣿⣿⣿[0m
  [38;2;106;112;122m│                  [38;2;85;196;254m⣿⣿⣿⣿⣿          ⣿⣿⣿⣿⣿          ⣿⣿⣿⣿⣿[0m
  [38;2;106;112;122m│                  [38;2;85;196;254m⣿⣿⣿⣿⣿          ⣿⣿⣿⣿⣿[38;2;108;208;146m⣤⣤⣤⣤⣤     [38;2;85;196;254m⣿⣿⣿⣿⣿[0m
  [38;2;106;112;122m│   [38;2;85;196;254m⣿⣿⣿⣿⣿          ⣿⣿⣿⣿⣿          ⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣶⣶⣶⣶⣶[0m
  [38;2;106;112;122m│   [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣀⣀⣀⣀⣀     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣶⣶⣶⣶⣶     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿[0m
  [38;2;106;112;122m│   [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿[0m
  [38;2;106;112;122m│   [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿[0m
 [38;2;106;112;122m0┤   [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿     [38;2;85;196;254m⣿⣿⣿⣿⣿[38;2;108;208;146m⣿⣿⣿⣿⣿[0m
  [38;2;106;112;122m└────────────────────────────────────────────────────────────[0m
          [38;2;106;112;122mQ1             Q2             Q3             Q4[0m
   [38;2;85;196;254m── [38;2;106;112;122min   [38;2;108;208;146m── [38;2;106;112;122mout[0m

--- meta ---
{
  "dropped_rows": 0,
  "mark": "bar",
  "series": [
    {
      "color": "#55c4fe",
      "name": "in",
      "points": 4
    },
    {
      "color": "#6cd092",
      "name": "out",
      "points": 4
    }
  ],
  "size": {
    "columns": 63,
    "rows": 15
  },
  "x": {
    "categories": [
      "Q1",
      "Q2",
      "Q3",
      "Q4"
    ],
    "field": "q",
    "type": "nominal"
  },
  "y": {
    "aggregate": "sum",
    "domain": [
      0.0,
      80.0
    ],
    "field": "n"
  }
}
