crates/benday-core/tests/snapshots/gallery__grouped_bars_referrals.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
                  referrals in vs out by quarter

80┤
  │                                                ⣿⣿⣿⣿⣿
  │                                 ⣶⣶⣶⣶⣶          ⣿⣿⣿⣿⣿
  │                  ⣿⣿⣿⣿⣿          ⣿⣿⣿⣿⣿          ⣿⣿⣿⣿⣿
  │                  ⣿⣿⣿⣿⣿          ⣿⣿⣿⣿⣿⣤⣤⣤⣤⣤     ⣿⣿⣿⣿⣿
  │   ⣿⣿⣿⣿⣿          ⣿⣿⣿⣿⣿          ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿     ⣿⣿⣿⣿⣿⣶⣶⣶⣶⣶
  │   ⣿⣿⣿⣿⣿⣀⣀⣀⣀⣀     ⣿⣿⣿⣿⣿⣶⣶⣶⣶⣶     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  │   ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  │   ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
 0┤   ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿     ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  └────────────────────────────────────────────────────────────
          Q1             Q2             Q3             Q4
   ── in   ── out

--- meta ---
{
  "dropped_rows": 0,
  "mark": "bar",
  "series": [
    {
      "color": "#55c4fe",
      "name": "in",
      "points": 4
    },
    {
      "color": "#6cd092",
      "name": "out",
      "points": 4
    }
  ],
  "size": {
    "columns": 63,
    "rows": 15
  },
  "x": {
    "categories": [
      "Q1",
      "Q2",
      "Q3",
      "Q4"
    ],
    "field": "q",
    "type": "nominal"
  },
  "y": {
    "aggregate": "sum",
    "domain": [
      0.0,
      80.0
    ],
    "field": "n"
  }
}
