crates/benday-core/tests/snapshots/gallery__histogram_bell.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
10┤                        ⣿⣿⣿⣿⣿⣿
  │                  ⣤⣤⣤⣤⣤⣤⣿⣿⣿⣿⣿⣿⣤⣤⣤⣤⣤⣤
  │                  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  │                  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  │            ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  │            ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣤⣤⣤⣤⣤⣤
  │      ⣤⣤⣤⣤⣤⣤⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
 0┤⣶⣶⣶⣶⣶⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶
  └┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────
   0    10    20    30    40    50    60    70    80    90  100

--- meta ---
{
  "dropped_rows": 0,
  "mark": "bar",
  "size": {
    "columns": 63,
    "rows": 10
  },
  "x": {
    "bin": {
      "bins": 10,
      "domain": [
        0.0,
        100.0
      ],
      "step": 10.0
    },
    "field": "latency_ms",
    "type": "quantitative"
  },
  "y": {
    "aggregate": "count",
    "domain": [
      0.0,
      10.0
    ],
    "field": "latency_ms"
  }
}
