crates/benday-core/tests/snapshots/gallery__histogram_skewed_empty_run.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
12┤⣀⣀⣀⣀⣀⣀⣀
  │⣿⣿⣿⣿⣿⣿⣿
  │⣿⣿⣿⣿⣿⣿⣿
  │⣿⣿⣿⣿⣿⣿⣿
  │⣿⣿⣿⣿⣿⣿⣿⣀⣀⣀⣀⣀⣀
  │⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  │⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                  ⣿⣿⣿⣿⣿⣿⣀⣀⣀⣀⣀⣀⣀
 0┤⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿                                  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
  └┴──────┴─────┴──────┴──────┴─────┴──────┴──────┴─────┴──────
   0     20    40     60     80    100    120    140   160  180

--- meta ---
{
  "dropped_rows": 0,
  "mark": "bar",
  "size": {
    "columns": 63,
    "rows": 10
  },
  "x": {
    "bin": {
      "bins": 9,
      "domain": [
        0.0,
        180.0
      ],
      "step": 20.0
    },
    "field": "latency_ms",
    "type": "quantitative"
  },
  "y": {
    "aggregate": "count",
    "domain": [
      0.0,
      12.0
    ],
    "field": "latency_ms"
  }
}
